@@ -59,6 +59,11 @@ define(TESTNO,0)
 
 test_compile_error_low(master()->add_precompiled_program(\"/test\",compile_string(\"int foo() { return 17; }\",\"62\")))
 
+test_compile([[while(0)if(0)continue;else;]])
+test_program([[int b=1,c; int a() { c=b+2; return c==3; }]])
+test_true([[ ("foobar"/"o") & ({ "foo" }) ]])
+test_any([[ array a="foo bar"/" "; return sizeof(a & ({"foo"}))]],1)
+
 test_eq("\377"[0],255)
 test_do(add_efun("foo",clone(class {int i;})))
 test_eq(foo->i,0)
